# ProjectSentinelAIGenerator

./: app.py  pyproject.toml  replit.nix  test.json
agents/: action_items.py  discussion.py  document_analyzer.py  document_processor.py
attached_assets/: プロンプト.json
static/css/: style.css
static/js/: script.js  script.js.bak
templates/: index.html
