[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "agents>=1.4.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "google-generativeai>=0.8.4",
    "gunicorn>=23.0.0",
    "langchain-community>=0.3.20",
    "langchain>=0.3.21",
    "langchain-google-genai>=2.0.10",
    "psycopg2-binary>=2.9.10",
    "tiktoken>=0.9.0",
    "python-docx>=1.1.2",
    "pypdf2>=3.0.1",
    "faiss-cpu>=1.10.0",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
]
